# githubaction-toolbox-mwe

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  buildfile.m  flake.nix
.github/workflows/: build.yaml  buildAllToolboxes.m  buildtoolbox.m  hugo.yaml  publish.yaml  release.yaml
docs/: hugo.yaml
docs/content/: _index.org
mex/: CMakeLists.txt  mexMatrixAddOne.c  mexMatrixSubtractOne.c
tests/: CMakeLists.txt  TestScalarMath.m
toolbox/: GettingStarted.mlx
toolbox/+mwe/: addOne.m  identity.m  subtractOne.m
